--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <div id="paddle"></div>
       <div id="ball"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
